# phpizza

./: .gitignore  .gitmodules  .htaccess  .user.ini  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PHPIZZA_PRIVACY_POLICY.md  README-DB.md  README.md  SECURITY.md  api_get_info.php  composer.json  css.php  default-config.php  httpd404.php  index.php  init.php  js.php  load.php  package-lock.json  package.json  phpizza.php  server.py  server_.py  tmp_api_test.php  tsconfig.json  ttf.php  woff2.php
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
admin/: edit.php
client_src/: console_message.ts  devtoolsTest.ts  editor.ts  mistral-backed-agent-ui.ts
codespaces-tweaks/: oh-my-zsh-install
includes/: .htaccess  .user.ini  404-fallback.md  APIEntryPoint.php  APIEntryPointDeletePage.php  APIEntryPointUpdatePage.php  Addon.php  AssetLoader.php  AssetLoaderEntryPoint.php  BrowserEntryPoint.php  CLIEntryPoint.php  COPPAConsentRequest.php  COPPADatabase.php  ConfigurationDatabase.php  Database.php  DomainPicker.php  ErrorScreen.php  Exception.php  Extension.php  GlobalFunctions.php  Localizer.php  MariaDB.php  MetaSQL.php  MyRocks.php  MySQL.php  Ollama.php  PHPizzaExtensionAPI.php  PHPizzaInstaller.php  PageDatabase.php  PageRenderer.php  PageRendering.php  ParsedownWithTemplating.php  PerconaServer.php  Pizzadown.php  PizzadownEmbedHandler.php  PizzadownEmbedHandlerFacebook.php  PizzadownEmbedHandlerMastodon.php  PizzadownEmbedHandlerNoradSantaTracker.php  (+25 more)
rust-server/: Cargo.toml  README.md
rust-server/src/: main.rs
(+213 files in other folders)
